# text-analysis-with-python

./: .gitignore  BATCH_PROCESSING_GUIDE.md  BERT_OCR.ipynb  Basic_Text_Processing.ipynb  FinBERT_Training.ipynb  Hugging Face Transformers.ipynb  LDA_Draft.ipynb  NLTK Intro.ipynb  NYT Books API.ipynb  README.md  Rotten Tomatoes.csv  Scifi.csv  Spacy NER.ipynb  Topic_Modeling with Gensim.ipynb  Topic_Modeling.ipynb  infovis5text.ipynb  pyproject.toml  requirements.txt
Data/gutenberg-test/: metadata.csv
LDAviz/: LDAviz60.html  Topic_Modeling.ipynb
OCR/: BERT_OCR.ipynb
notebooks/: Apply_Topic_Model_Runner.ipynb  BATCH_NOTEBOOKS_README.md  Batch_Topic_Modeling_Runner.ipynb  HTRC-EF-CliFi.ipynb  NLTK-Complete-Tutorial.ipynb
notebooks/api/: NYT-Books-API.ipynb
notebooks/booknlp/: BookNLP-Literary-Analysis.ipynb  Pick-Any-Book-BookNLP Demo.ipynb  README.md
notebooks/classification/: AI-For-Humanists-DEMO.ipynb  AI-for-Humanists-Fine-Tuning-Classification.ipynb  NLTK-Intro.ipynb  Text Mining for the Humanities.ipynb
notebooks/generation/: Train a GPT-2 Text-Generating Model w_ GPU.ipynb
notebooks/ocr/: BERT_OCR.ipynb
notebooks/spacy/: Spacy-NER-General.ipynb  Spacy-NER.ipynb
notebooks/topic-modeling/: LDAviz.html  LDAviz60.html  README.md  Topic_Modeling.ipynb
notebooks/word2vec/: README.md  (+3 more)
scripts/: README.md  apply_topic_model.py  batch_topic_modeling.py  convert_notebook_to_script.py  example_restricted_corpus.sh  nlp_utils.py  train_word2vec.py  visualize_embeddings_plotly.py  visualize_embeddings_whatlies.py
scrollytelling/: build.py  template.html
(+46 files in other folders)
