[project]
name = "text-analysis-with-python"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "plotly>=6.5.2",
    "pyldavis>=3.4.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
